--- a/Assignment 2/assignment-two.html
+++ b/Assignment 2/assignment-two.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>User Registration System</h1>
+        <h1>USER REGISTRATION SYSTEM</h1>
         <nav>
             <a href="#">Home</a>
             <a href="#">Register</a>
